# flight-chatbot-be

./: .gitignore  Cargo.toml  README.md  server_copy
src/: controller.rs  main.rs  model.rs  route.rs  server.rs
src/module/: error_handler.rs  mod.rs  response_handler.rs  route_structure.rs
src/test/: endpoint_tests.rs  mod.rs
templates/: template.hbs
