[package]
name = "flight-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
dotenv = "0.15.0"
reqwest = "0.11.4"
chrono = { version = "0.4.26", features = ["serde"] }
serde_json = "1.0.104"
uuid = {version = "1.4.0", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}
 
[[bin]]
name="app_entry_point"
path="src/server.rs"
