[package]
name = "flight-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
dotenv = "0.15.0"
reqwest = "0.11.4"
chrono = { version = "0.4.26", features = ["serde"] }
serde_json = "1.0.104"
uuid = {version = "1.4.0", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}
validator = "0.16.1"
rocket-validation = "0.1.3"
rocket_cors = "0.6.0-alpha2"
lazy_static = "1.4.0"

shuttle-rocket = "0.23.0"
shuttle-runtime = "0.23.0"
tokio = "1.26.0"

# [dependencies.rocket_contrib]
# version = "0.4.2"
# default-features = false
# features = [ "json"]


 
# [[bin]]
# name="app_entry_point"
# path="src/server.rs"



[toolchain]
channel = "nightly"